location under the picture

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <!--the header shows logo and page title-->
         <h1>Juvina Thaker</h1>
         <img src="img/self-640.jpg" alt="Juvina">
+        <h4>Location: Mumbai, India</h4>
 
     </header>
 
